<resources>
    <string name="app_name">Spain on Rails</string>
    <string name="home">Inicio</string>
    <string name="trains">Trenes</string>
    <string name="routes">Rutas</string>
    <string name="stations">Estaciones</string>
    <string name="screen_title">NombrePantalla</string>
    <string name="login_title">Bienvenido</string>
    <string name="login_subtitle">Inicia sesión o regístrate</string>
    <string name="register">Registrarse</string>
    <string name="start_sesion">Iniciar sesión</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="remember_password">Recordar contraseña</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_confirm">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="sp_remember_user">remember_user_control</string>
    <string name="sp_id_user">id_user</string>
    <string name="main_error_server">Error en la petición</string>
    <string name="unknown_error_server">Error desconocido en la petición</string>
    <string name="login_error">El usuario y/o contraseña introducidos son incorrectos</string>
    <string name="error_username_empty">El campo del nombre de usuario está vacío</string>
    <string name="error_password_empty">El campo de la contraseña está vacío</string>
    <string name="dialog_new_user_title">Nuevo usuario</string>
    <string name="dialog_register_user">Registrarse</string>
    <string name="error_required_field">Este campo es obligatorio</string>
    <string name="helper_text_required">Obligatorio</string>
    <string name="helper_text_optional">Opcional</string>
    <string name="cardview_train_title">Nombre Tren</string>
    <string name="cardview_station_title">Nombre estación</string>
    <string name="cardview_station_city">Población estación</string>
    <string name="hint_search_stations">Buscar estaciones</string>
    <string name="cardview_route_start">Estación inicio ruta</string>
    <string name="cardview_route_end">Estación fin ruta</string>
    <string name="img_train_description">Imagen del tren</string>
    <string name="capacity">Capacidad:</string>
    <string name="capacity_num">00</string>
    <string name="train_description">Descripción tren</string>
    <string name="rutas_train_title">Rutas del tren:</string>
    <string name="img_station_description">Imágen de la estación</string>
    <string name="station_city">Población estación</string>
    <string name="station_location">Dirección estación</string>
    <string name="rutas_station_title">Rutas con esta estación:</string>
    <string name="hint_image">Foto de perfil</string>
    <string name="error_url">URL inválida</string>
    <string name="error_image_url">La URL de la imagen de perfil no es válida</string>
    <string name="error_existent_username">Nombre en uso</string>
    <string name="error_errors_in_fields">Revisa los campos con errores</string>
    <string name="error_required_username">El campo del nombre de usuario es obligatorio</string>
    <string name="error_required_password">El campo de la contraseña es obligatorio</string>
    <string name="route_description">Descripción de la ruta</string>
    <string name="estaciones_ruta_title">Estaciones de la ruta:</string>
    <string name="trenes_ruta_title">Trenes de la ruta:</string>
    <string name="user_username">Nombre de usuario</string>
    <string name="user_email">usuario@direccioncorreo.com</string>
    <string name="email_not_specified">E-mail no especificado</string>
    <string name="delete_user">Eliminar cuenta</string>
    <string name="user_tickets">Mis billetes</string>
    <string name="user_tavel_plans">Mis planes de viaje</string>
    <string name="dialog_edit_user_title">Editar usuario</string>
    <string name="dialog_edit_user">Aplicar</string>
    <string name="profile">Perfil</string>
    <string name="dialog_info_title">Información</string>
    <string name="future_development">Desarrollo futuro</string>
    <string name="logout">Cerrar sesión</string>
    <string name="dialog_delte_user_title">Eliminar cuenta</string>
    <string name="delete_user_info">Se necesita la contraseña del usuario para borrar la cuenta</string>
    <string name="invalid_password">Contraseña incorrecta</string>
    <string name="logout_ask">¿Deseas cerrar sesión?</string>
    <string name="checking_out">Cerrando sesión...</string>
    <string name="dialog_logout">Cerrar sesión</string>
</resources>