<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.trainDetailModule.TrainDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgTrain"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_detail_height"
            android:contentDescription="@string/img_train_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/large_padding">

            <TextView
                android:id="@+id/tvTrainDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardview_train_title"
                android:textColor="@color/md_theme_secondaryContainer_highContrast"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/capacityInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/common_icon_min"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_people"
                    app:tint="@color/md_theme_secondaryContainer_highContrast"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capacity"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginHorizontal="@dimen/common_margin_min"/>

                <TextView
                    android:id="@+id/tvTrainDetailCapacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capacity_num"
                    android:textAppearance="?attr/textAppearanceBody1"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvTrainDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/train_description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:layout_marginTop="@dimen/common_margin_default" />

            <TextView
                android:id="@+id/tvTrainDetailRutasTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rutas_train_title"
                android:textColor="@color/md_theme_secondaryContainer_highContrast"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:layout_marginTop="@dimen/common_margin_default" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvRoutesTrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_route"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/common_margin_default" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
