<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainModule.details.stationDetailModule.StationDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgStation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_detail_height"
            android:contentDescription="@string/img_station_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/large_padding">

            <TextView
                android:id="@+id/tvStationDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardview_station_title"
                android:textColor="@color/md_theme_secondaryContainer_highContrast"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/common_icon_min"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_station"
                    app:tint="@color/md_theme_secondaryContainer_highContrast"/>

                <TextView
                    android:id="@+id/tvStationDetailCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/station_city"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginHorizontal="@dimen/common_margin_min"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/common_margin_min">

                <ImageView
                    android:layout_width="@dimen/common_icon_min"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    app:tint="@color/md_theme_secondaryContainer_highContrast"/>

                <TextView
                    android:id="@+id/tvStationDetailLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/station_location"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginHorizontal="@dimen/common_margin_min"/>

            </LinearLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/map_detail_height"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/common_margin_default"
                map:uiZoomControls="true" />

            <TextView
                android:id="@+id/tvStationDetailRutasTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rutas_station_title"
                android:textColor="@color/md_theme_secondaryContainer_highContrast"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:layout_marginTop="@dimen/large_margin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvRoutesStation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_route"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/common_margin_default" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
