<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainModule.details.routeDetailModule.RouteDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/large_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icRouteStart"
                android:layout_width="@dimen/common_icon_min"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_circle"
                app:tint="@color/md_theme_secondaryContainer_highContrast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvRouteDetailStartStation"
                app:layout_constraintBottom_toBottomOf="@id/tvRouteDetailStartStation"/>

            <TextView
                android:id="@+id/tvRouteDetailStartStation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cardview_route_start"
                android:textColor="@color/md_theme_secondaryContainer_highContrast"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/common_margin_default"
                app:layout_constraintStart_toEndOf="@id/icRouteStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/icRouteEnd"
                android:layout_width="@dimen/common_icon_min"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_circle"
                app:tint="@color/md_theme_secondaryContainer_highContrast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvRouteDetailEndStation"
                app:layout_constraintBottom_toBottomOf="@id/tvRouteDetailEndStation"/>

            <TextView
                android:id="@+id/tvRouteDetailEndStation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cardview_route_end"
                android:textColor="@color/md_theme_secondaryContainer_highContrast"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/common_margin_default"
                android:layout_marginStart="@dimen/common_margin_default"
                app:layout_constraintStart_toEndOf="@id/icRouteEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRouteDetailStartStation"/>

            <View
                android:layout_width="@dimen/separator_size"
                android:layout_height="0dp"
                android:background="@color/md_theme_secondaryContainer_highContrast"
                app:layout_constraintStart_toStartOf="@id/icRouteStart"
                app:layout_constraintEnd_toEndOf="@id/icRouteStart"
                app:layout_constraintTop_toBottomOf="@id/icRouteStart"
                app:layout_constraintBottom_toTopOf="@id/icRouteEnd" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvRouteDetailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_description"
            android:textAppearance="?attr/textAppearanceBody2"
            android:layout_marginTop="@dimen/common_margin_default" />

        <TextView
            android:id="@+id/tvRouteDetailEstacionesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estaciones_ruta_title"
            android:textColor="@color/md_theme_secondaryContainer_highContrast"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="@dimen/common_margin_default" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvStationsRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_station"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/common_margin_default" />

        <TextView
            android:id="@+id/tvRouteDetailTrenesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trenes_ruta_title"
            android:textColor="@color/md_theme_secondaryContainer_highContrast"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="@dimen/common_margin_default" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvTrainsRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_train"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/common_margin_default" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
