<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_primary80"
    tools:context=".userModule.UserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_app_bar_height"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/md_theme_primary80">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/large_padding">

            <ImageView
                android:id="@+id/imgGoBack"
                android:layout_width="@dimen/large_padding"
                android:layout_height="@dimen/large_padding"
                android:src="@drawable/ic_back"
                app:tint="@color/md_theme_secondaryContainer_highContrast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/imgUserEdit"
                android:layout_width="@dimen/large_padding"
                android:layout_height="@dimen/large_padding"
                android:src="@drawable/ic_edit"
                app:tint="@color/md_theme_secondaryContainer_highContrast"
                android:layout_marginEnd="@dimen/large_margin"
                app:layout_constraintEnd_toStartOf="@id/imgLogout"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="@dimen/large_padding"
                android:layout_height="@dimen/large_padding"
                android:src="@drawable/ic_logout"
                app:tint="@color/md_theme_secondaryContainer_highContrast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="@dimen/image_user_size"
            android:layout_height="@dimen/image_user_size"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_username"
            android:textColor="@color/md_theme_secondaryContainer_highContrast"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:layout_marginTop="@dimen/common_margin_min"
            android:layout_gravity="center"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_margin_default"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/common_icon_default"
                android:layout_height="@dimen/common_icon_default"
                android:src="@drawable/ic_email"
                app:tint="@color/md_theme_secondaryContainer_highContrast"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/common_margin_min"/>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardUserTickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_margin"
            app:cardBackgroundColor="@color/md_theme_primary80"
            app:strokeColor="@color/md_theme_secondaryContainer_highContrast">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="@dimen/common_margin_default">

                <ImageView
                    android:layout_width="@dimen/common_icon_min"
                    android:layout_height="@dimen/common_icon_min"
                    android:src="@drawable/ic_ticket"
                    app:tint="@color/md_theme_secondaryContainer_highContrast"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_tickets"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/common_margin_min"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardUserTravelPlans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_margin_default"
            app:cardBackgroundColor="@color/md_theme_primary80"
            app:strokeColor="@color/md_theme_secondaryContainer_highContrast">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="@dimen/common_margin_default">

                <ImageView
                    android:layout_width="@dimen/common_icon_min"
                    android:layout_height="@dimen/common_icon_min"
                    android:src="@drawable/ic_travel_plan"
                    app:tint="@color/md_theme_secondaryContainer_highContrast"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_tavel_plans"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/common_margin_min"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <Button
        android:id="@+id/btnDeleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:backgroundTint="@color/md_theme_errorContainer_highContrast"
        android:layout_marginTop="@dimen/common_margin_default"
        app:layout_constraintStart_toStartOf="@id/userInfo"
        app:layout_constraintEnd_toEndOf="@id/userInfo"
        app:layout_constraintBottom_toBottomOf="@id/userInfo"/>

</androidx.constraintlayout.widget.ConstraintLayout>